# motorsport-calendar

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  config.example.yaml  mypy.ini  pyproject.toml  ruff.toml
.github/workflows/: ci.yml  publish.yml
assets/branding/: Branding.md
docs/: AI_CONTEXT.md  AUDIT.md  DATA_SOURCES.md  DECISIONS.md  JOURNAL.md  PACKAGING.md  PRODUCT_VISION.md  PROJECT_RULES.md  RELEASE.md  ROADMAP.md  TODO.md
motorsport_calendar/: __init__.py  __main__.py  cli.py
motorsport_calendar/cache/: __init__.py  http_cache.py
motorsport_calendar/config/: __init__.py  models.py  service.py
motorsport_calendar/core/: __init__.py  registry.py  service.py  source_registry.py
motorsport_calendar/core/datasource/: __init__.py  base.py  html_source.py  ics_source.py  json_source.py
motorsport_calendar/exporters/: __init__.py  base.py  ics.py
motorsport_calendar/gui/: __init__.py  __main__.py  app.py  calendar_selection.py  categories.py  championship_assets.py  circuit_service.py  controller.py  dashboard.py  display_names.py  event_details.py  event_display.py  favorites_service.py  main_view.py  models.py  notification_service.py  preferences.py  pyproject.toml  search_service.py  season_explorer.py  strings.py  system_notifications.py  theme.py  upcoming_weekend.py  update_service.py  url_opener.py
motorsport_calendar/gui/assets/championships/: README.md
motorsport_calendar/gui/assets/logo/: README.md
motorsport_calendar/gui/components/: __init__.py  championship_card.py  championship_selector.py
motorsport_calendar/gui/components/layout/: __init__.py  card_list.py  coming_soon_row.py  empty_state.py  page_container.py  page_header.py  section.py  spacing.py
motorsport_calendar/gui/views/: __init__.py  about.py  calendar.py  dashboard.py  favorites.py  preferences.py  search.py  support.py  weekend.py
motorsport_calendar/models/: __init__.py  championship.py  circuit.py  event.py  session.py
motorsport_calendar/providers/: __init__.py  base.py
motorsport_calendar/providers/aco_series/: circuit_data.py  sports_event_base.py
motorsport_calendar/providers/elms/: __init__.py  provider.py  source.py
motorsport_calendar/providers/f1_academy/: __init__.py  provider.py  source.py
motorsport_calendar/providers/formula1/: __init__.py  provider.py  source.py
motorsport_calendar/providers/formula2/: __init__.py  provider.py  source.py
motorsport_calendar/providers/formula3/: __init__.py  provider.py  source.py
motorsport_calendar/providers/formula_e/: __init__.py  provider.py  source.py
motorsport_calendar/providers/gtwc_america/: __init__.py  provider.py  source.py
motorsport_calendar/providers/gtwc_asia/: __init__.py  provider.py  source.py
motorsport_calendar/providers/gtwc_europe/: __init__.py  provider.py  source.py
motorsport_calendar/providers/igtc/: __init__.py  provider.py  source.py
motorsport_calendar/providers/imsa/: __init__.py  provider.py  source.py
motorsport_calendar/providers/mlmc/: __init__.py  provider.py  source.py
motorsport_calendar/providers/moto2/: __init__.py  provider.py  source.py
motorsport_calendar/providers/moto3/: __init__.py  provider.py  source.py
motorsport_calendar/providers/motogp/: __init__.py  provider.py  source.py
motorsport_calendar/providers/motogp_series/: __init__.py  pulselive_base.py
motorsport_calendar/providers/sro_series/: __init__.py  circuit_data.py  timetable_base.py
motorsport_calendar/providers/support_series/: __init__.py  f1calendar_base.py
motorsport_calendar/providers/wec/: __init__.py  circuit_data.py  provider.py  source.py
motorsport_calendar/providers/worldsbk/: __init__.py  provider.py  source.py
motorsport_calendar/utils/: __init__.py  logging.py  paths.py
tests/: conftest.py  test_aco_sports_event_base.py  test_cli.py  test_cli_generate.py  test_cli_generate_elms.py  test_cli_generate_f1.py  test_cli_generate_f1_academy.py  test_cli_generate_f2.py  test_cli_generate_f3.py  test_cli_generate_formula_e.py  test_cli_generate_gtwc_america.py  test_cli_generate_gtwc_asia.py  test_cli_generate_gtwc_europe.py  test_cli_generate_igtc.py  test_cli_generate_imsa.py  test_cli_generate_mlmc.py  test_cli_generate_moto2.py  test_cli_generate_moto3.py  test_cli_generate_motogp.py  test_cli_generate_wec.py  test_cli_generate_worldsbk.py  test_config_service.py  test_datasource.py  test_elms_provider.py  test_f1_academy_provider.py  test_f1calendar_base.py  test_f1calendar_source.py  test_formula1_provider.py  test_formula2_provider.py  test_formula3_provider.py  test_formula_e_provider.py  test_gtwc_america_provider.py  test_gtwc_asia_provider.py  test_gtwc_europe_provider.py  test_gui_calendar_selection.py  test_gui_categories.py  test_gui_championship_assets.py  test_gui_circuit_service.py  test_gui_components_championship_card.py  test_gui_components_championship_selector.py  (+40 more)
tests/fixtures/real/: elms_race_barcelona.html  elms_season_snippet.html  f1-academy.json  formula-e.json  formula2.json  formula3.json  gtwc_america_calendar.html  gtwc_america_event_cota.html  (+13 more)
(+38 files in other folders)
