[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "motorsport-calendar"
version = "0.1.0"
description = "Generate motorsport race calendars in ICS format"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
authors = [{ name = "Alan Yvenou", email = "yvenou.alan@gmail.com" }]
keywords = ["motorsport", "calendar", "ics", "formula1", "racing", "f1"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Scheduling",
    "Topic :: Internet :: WWW/HTTP",
    "Typing :: Typed",
]
dependencies = [
    "typer[all]>=0.12",
    "rich>=13.7",
    "pydantic>=2.7",
    "icalendar>=5.0",
    "httpx>=0.27",
    "python-dateutil>=2.9",
    "tzdata>=2024.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.10",
    "ruff>=0.8",
    "pre-commit>=3.7",
    "types-python-dateutil>=2.9",
]

[project.scripts]
motocal = "motorsport_calendar.cli:app"

[project.urls]
Homepage = "https://github.com/naviss29/motorsport-calendar"
Repository = "https://github.com/naviss29/motorsport-calendar"
Issues = "https://github.com/naviss29/motorsport-calendar/issues"
Changelog = "https://github.com/naviss29/motorsport-calendar/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["motorsport_calendar"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "--cov=motorsport_calendar",
    "--cov-report=term-missing",
    "--cov-report=html",
    "-v",
]

[tool.coverage.run]
source = ["motorsport_calendar"]
omit = ["tests/*"]
